--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
 	color:white;
 	border-radius:5px:
 	border:none;
+    padding: 10px 20px;   
+    font-size: 16px;
+    cursor: pointer;         
+    transition: all 0.3s ease;
 }
 #btn:hover{
 	background-color:yellow;
