--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,15 @@
-
-/* Your CSS Code here. */
-#btn{
-	background-color: rgb(0, 0, 0);
-	color: rgb(255, 255, 255);
-	border-radius: 5px:
-	border:none;
-
+#btn {
+    background-color: black; 
+    color: white; 
+    border-radius: 5px;
+    border: none; 
+    padding: 10px 20px; 
+    cursor: pointer;
+    font-size: 16px; 
 }
-#btn:hover{
-	background-color:yellow;
-	color:black;
-	border-radius:30px;
+
+#btn:hover {
+    background-color: yellow; 
+    color: black; 
+    border-radius: 30px; 
 }
